# oddly-survivor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-and-deploy.yml  check-upstream.yml  ci.yml
data/archive/: slugs.txt
pipeline/: charts.py  cli.py  config.py  correlate.py  features.py  ingest.py  palette.py  render.py  select.py  slugs.py
static/: style.css
templates/: about.html.j2  all.html.j2  base.html.j2  correlation.html.j2  index.html.j2
tests/: conftest.py  test_correlate.py  test_features.py  test_ingest.py  test_render.py
