[project]
name = "oddly-survivor"
version = "0.1.0"
description = "Spurious correlations in Survivor TV data"
requires-python = ">=3.11"
dependencies = [
    "pyreadr>=0.5.0",
    "rdata>=0.11",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "jinja2>=3.1",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
